# turboMaCk.github.io

./: .gitignore  LICENSE  README.md  archive.html  blog.cabal  blog.nix  default.nix  flake.nix  hakyll.nix  hakyll.patch  index.html  keybase.txt  publish.hs  result  rss.xml  shell.nix  site.cabal  site.hs  site.nix  stack.yaml
_site/: archive.html  index.html
css/: default.css  syntax.css
elm/: hello-world.elm
nix/: overlay.nix  shell.nix  site.nix
posts/: 2016-05-15-eml-0.17-upgrade.html  2016-05-15-eml-0.17-upgrade.md  2016-12-07-hybrid-types-in-typescript.html  2016-12-07-hybrid-types-in-typescript.md  2016-12-21-org-mode-in-hakyll.html  2016-12-21-org-mode-in-hakyll.org  2016-12-29-from-vim-to-emacs-year-later.html  2016-12-29-from-vim-to-emacs-year-later.org  2017-02-12-recursion.html  2017-02-12-recursion.org  2017-04-09-tail-recursion.html  2017-04-09-tail-recursion.org  2019-07-28-rust-vs-gui.html  2019-07-28-rust-vs-gui.org  2019-07-31-avoiding-pattern-matching-refunctionalization.org  2019-08-14-avoiding-pattern-matching-refunctionalization.html  2019-08-14-avoiding-pattern-matching-refunctionalization.org  2020-02-17-cabal-flags-and-nix.html  2020-02-17-cabal-flags-and-nix.org  2020-02-21-value-space-decoding-for-aeson.html  2020-02-21-value-space-decoding-for-aeson.org  2020-04-29-multiple-dropbox-accounts.html  2020-04-29-multiple-dropbox-accounts.org  2020-05-12-anonymous-types-matter.html  2020-05-12-anonymous-types-matter.org  LICENSE
sass/: _variables.scss  default.scss  syntax-highlighting.scss  syntax.scss  variables.scss
src/: site.hs
(+35 files in other folders)
