name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , hakyll-contrib-elm
                  , hakyll-sass
                  , pandoc
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
