name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll
                  , hakyll-sass
                  , pandoc
  ghc-options:      -threaded -Wall
  default-language: Haskell2010

executable publish
  main-is:          publish.hs
  build-depends:    base == 4.*
                  , directory
  ghc-options:      -threaded -Wall
  default-language: Haskell2010